# rust-webapp-starter

./: .dockerignore  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
src/: main.rs  router.rs
src/api/: article.rs  auth.rs  home.rs  index.rs  mod.rs  user.rs
src/handler/: article.rs  auth.rs  func.rs  index.rs  user.rs
src/model/: article.rs  db.rs  mod.rs  response.rs  user.rs
src/share/: common.rs  mod.rs  state.rs
src/utils/: cors.rs  error.rs  jwt.rs  mod.rs  token.rs
webapp/: package-lock.json  package.json  vue.config.js
webapp/public/: index.html  manifest.json
webapp/src/: App.vue  app.vue  config.js  main.js
webapp/src/axios/: index.js
webapp/src/components/nav/: Mnav.vue
webapp/src/pages/article/: Article.vue
webapp/src/pages/home/: Home.vue
webapp/src/pages/more/: More.vue
webapp/src/pages/new/: New.vue
webapp/src/pages/notfound/: NotFound.vue
webapp/src/pages/user/: Access.vue  Center.vue  SignUp.vue
webapp/src/router/: index.js
webapp/src/utils/: auth.js
webapp/src/views/about/: About.vue
webapp/src/views/article/: Article.vue
webapp/src/views/home/: Home.vue
webapp/src/views/new/: New.vue
webapp/src/views/user/: Access.vue  Center.vue  SignUp.vue
webapp/src/views/wiki/: Wiki.vue
