[package]
name = "Rust-webapp-starter"
version = "0.1.0"
authors = ["krircc <krircc@aliyun.com>"]

[[test]]
name = "tests"
path = "tests/lib.rs"

[dependencies]
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
diesel = { version = "^1.1.0", features = ["postgres","chrono","serde_json", "r2d2"] }
data-encoding = "2.1"
num_cpus = "1.0"

actix-web = "^0.7"
http = "^0.1.0"
postgres = {version= "^0.15.0", features = ["with-chrono"]}
dotenv = "^0.13.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "^0.2.0"
env_logger = "^0.5.0"
futures = "^0.1"
ring = "0.13.2"
